2000-03-23  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* INSTALL, configure.in, Makefile.in, sfio/Makefile.in,
	  sfio/src/lib/sfio/makefile.in,
	  sfio/src/lib/sfio/{Sfio_{dc,f},Stdio_{b,s}}:
	    Made SFIO compilation environment to work also when running
	    in "subdirectory" configuration (e.g. using  ../configure ...)
	    Also cleaned up the SFIO configuration system a bit.

	* doc/guides/smtp-policy:
	    Added some words about the policy testing by using -T option.

2000-03-21  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* man/smtpserver.8, smtpserver/smtpserver.h, smtpserver/smtpserver.c:
	    Implemented  -T  option for a local interactive policy testing
	    without having connectivity all around the world.
	    See the man-page.

2000-03-18  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* router/daemonsub.c, router/conf.c:
	    Spotted a self-healing misbehaviour in the child process feeder,
	    which skipped messages from queue quite *often*.  Cured that
	    by waiting in proper place for successfull delivery.
	    Also changed some default values for "stability" processing.

	* router/rfc822hdrs.c, router/rfc822.c, lib/token.c:
	    Aborted (and deactivated) foldable tokens processing on headers
	    we don't know about right now.  Perhaps need to have some other
	    approach on the problem...

2000-03-17  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* smtpserver/smtpcmds.c, smtpserver/smtprouter.c:
	    Instead of using printf format:  %*s  we need to use  %.*s

	* transports/libta/swriteheaders.c:
	    Eugene Crosser spotted CHUNKING mode problem with
	    message header TAB expansion.  Outch!

	* router/router.c:  logit()
	    Changed  stdout  written log printf() format so that
	    quite large lists of addresses are allowed.

2000-03-15  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* configure.in, transports/mailbox/mailbox.c:
	    "--without-maillock" configuration option from
	    Eugene Crosser.   We don't seem to be quite
	    as happy chaps with Solaris maillock() as we